# Pokemon_cli

./: CMakeLists.txt  README.md  main.cpp
bags/: Bag.cpp  Bag.h
fights/: Fight.cpp  Fight.h
menus/: Menu.cpp  Menu.h  text.csv
pcs/: Pc.cpp  Pc.h
pokeballs/: Pokeball.cpp  Pokeball.h  pokeballs.csv
pokemons/: Move.cpp  Move.h  Moves.csv  Pokemon.cpp  Pokemon.h  Pokemons.csv  pokemon-data.csv
potions/: Potion.cpp  Potion.h  potions.csv
trainers/: Trainer.cpp  Trainer.h  save.csv
utils/: CsvReader.cpp  CsvReader.h  Utils.cpp  Utils.h
